--- a/web/templates/template.html
+++ b/web/templates/template.html
@@ -3,40 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Biomedical Information Retrieval</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/template.css') }}">
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  </head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ url_for('static',    filename='css/template.css') }}">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script> 
+</head>
   <body>
-    <nav class="navbar navbar-expand-sm topnav navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm topnav fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand">Biomedical Information Retrieval</a>
+          <a class="navbar-brand" style="color: #EBEDE8">Biomedical Information Retrieval</a>
           <form class="d-flex" method="post" action="{{ url_for('index') }}">
             <input class="form-control me-2" type="text" name="Search" {% if KeyWord == "" %}placeholder="Search"{% else %}placeholder="{{KeyWord|e}}"{% endif %}>
-            <button class="btn btn-primary" type="submit">Search</button>
+            <button class="btn nav-btn" type="submit">Search</button>
           </form>
         </div>
     </nav>
 
-    <nav class="navbar leftnav navbar-dark fixed-top d-flex align-items-start">
+    <nav class="navbar leftnav fixed-top d-flex align-items-start">
         <div class="container-fluid cf_leftnav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a {% if active_page == "index" %}class="nav-link active"{% else %}class="nav-link"{% endif %} 
+                  <a {% if active_page == "index" %}class="nav-link left-active"{% else %}class="nav-link left"{% endif %} 
                         href="{{ url_for('index') }}">Article Search</a>
                 </li>
                 <li class="nav-item">
-                  <a {% if active_page == "about" %}class="nav-link active"{% else %}class="nav-link"{% endif %} 
+                  <a {% if active_page == "about" %}class="nav-link left-active"{% else %}class="nav-link left"{% endif %} 
                     href="{{ url_for('about') }}">Analysis</a>
+                </li>
+                <li class="nav-item">
+                  <a {% if active_page == "overview" %}class="nav-link left-active"{% else %}class="nav-link left"{% endif %} 
+                    href="{{ url_for('overview') }}">Overview</a>
                 </li>
               </ul>
         </div>
     </nav>
     {% block content %}
     {% endblock %}
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
